k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  type: NodePort
  ports:
    - name: https
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: web-app
