k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  backend:
    serviceName: web-app
    servicePort: 8080
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web-app
              servicePort: 8080
